--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
     <link rel="stylesheet" href="assets/css/main.min.css">
 </head>
 <body>
-    hello
-    <script src="dist/js/main.min.js"></script>
+    <header class="header">
+        <div class="container">
+            <div class="header__wrapper">
+                <a href="/" class="header__logo-link">
+                    <img src="assets/img/logo.svg" alt="" class="header__logo">
+                </a>
+                <nav class="header__nav">
+                    <ul class="header__nav-list">
+                        <li class="header__nav-item"><a href="#" class="header__nav-link header__nav-link--active">Бизнес</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">О нас</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Цены</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Оформить заказ</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="hero">
+            
+        </section>
+    </main>
+    <footer class="footer">
+
+    </footer>
+
+    <script src="assets/js/main.min.js"></script>
 </body>
 </html>
